Added mixins part 1

--- a/assets/index.html
+++ b/assets/index.html
@@ -35,6 +35,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui pariatur in iure. Rem, aliquid, cumque. Id tenetur, facere aut odio dolores qui, iste sit voluptates ullam doloribus suscipit quasi obcaecati alias voluptatum error ab <a href="#">repellendus</a> deleniti ipsa quae sint! Nobis tempora cupiditate voluptate earum fuga laudantium vitae deleniti consectetur sapiente.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas possimus, et deleniti commodi sit, excepturi! Perspiciatis omnis aut impedit saepe consequatur quis dolores distinctio cumque aperiam velit repellendus dicta temporibus, a ducimus exercitationem, ratione harum quos voluptatem totam possimus eaque, porro quo voluptatum voluptates. Ducimus facere quod laborum, odit numquam amet. Ea sequi, harum neque, alias ratione iure blanditiis, accusamus reprehenderit impedit numquam libero suscipit voluptatibus enim. Exercitationem placeat, repellat.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, eius sapiente excepturi saepe vero maxime! Laborum quidem debitis labore quia magni tempore <a href="#">voluptatibus</a> omnis pariatur consectetur, molestiae nisi et ratione?</p>
+        <button class="warning-button">Something went wrong</button>
       </section>
       <section id="promo">
         <h2>Check Out My Work</h2>
